--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,14 @@
       margin: 20px 0; /* Margen exterior */
       font-family: monospace; /* Fuente monoespaciada */
     }
+    .dragonBall {
+      width: 200px;
+      height: 200px;
+      /*overflow: hidden;  Opcional: para recortar el exceso */
+    }
+    
+    .dragonBall img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Ajusta la imagen al contenedor */
+    }
