--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,23 @@
     .dragonBall {
       width: 200px;
       height: 200px;
-      /*overflow: hidden;  Opcional: para recortar el exceso */
+      /* overflow: hidden;  Opcional: para recortar el exceso */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 10px; /* Espacio interno */
     }
     
     .dragonBall img {
       width: 100%;
       height: 100%;
       object-fit: contain; /* Ajusta la imagen al contenedor */
+      border-radius: 8px; /* Bordes redondeados para la imagen */
+      box-shadow: 0 4px 8px rgba(61, 65, 68, 0.3); /* Sombra para la imagen */
+      transition: box-shadow 0.5s ease; /* Transición suave para el hover */
+    }
+    
+    .dragonBall img:hover {
+      box-shadow: 0 8px 16px rgba(61, 65, 68, 0.5); /* Sombra más pronunciada al hacer hover */
     }
